--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				
 				<div class="banner-info">
 				
-				<div class="logo">
-					<h1><a href="index.html">Navi</a></h1>
-				</div>
-					<h5>Get all the information you need in front of you. Keep eyes on the road. Ride safer</h5>
+				<!-- <div class="logo"> -->
+					<!-- <h1><a href="index.html">Navi</a></h1> -->
+				<!-- </div> -->
+					<!-- <h5>Get all the information you need in front of you. Keep eyes on the road. Ride safer</h5> -->
 				<div class="scroll">
 					<a href="#contact" class="scroll"><img src="images/down.png" class="img-responsive" alt="" /></a>
 				</div>
