--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<ul class="cl-effect-7">
 								<li><a href="#home" class="scroll">Home</a></li>
 								<li><a href="#about" class="scroll">About</a></li>
-								<li><a href="#services" class="scroll">Services</a></li>
+								<li><a href="#team" class="scroll">Team</a></li>
 								<li><a href="#products" class="scroll">Products</a></li>
 								<li><a href="#contact" class="scroll">Contact</a></li>
 									<div class="clearfix"> </div>
@@ -133,7 +133,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!-- advantages -->
 
 <!-- feature -->
-	<div class="Feature" id="services">
+	<div class="Feature" id="team">
 		<div class="container">
 			<h3>Feature Services</h3>
 			<div class="feature-top">
