--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</script>
 				<!-- script-for-nav -->
 				<div>
-				  <img src="../images/navi_header.png">
+				  <!--<img src="../images/navi_header.png">-->
 				  </div>
 				<div class="banner-info">
 				<!-- <div class="logo"> -->
