--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--
+B<!--
 Author: W3layouts
 Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
@@ -83,8 +83,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</script>
 				<!-- script-for-nav -->
 				<div>
-				  <!--<img src="../images/navi_header.png">-->
-				  </div>
+				  <img src="../images/navi_header.png">
+				</div>
 				<div class="banner-info">
 				<!-- <div class="logo"> -->
 					<!-- <h1><a href="index.html">Navi</a></h1> -->
