--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						});
 					</script>
 				<!-- script-for-nav -->
-				<div style="vertical-align:middle">
+				<div style="float:left">
 				  <img src="../images/navi_header.png">
 				</div>
 				<div class="banner-info">
