--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-B<!--
+BB<!--
 Author: W3layouts
 Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
@@ -82,7 +82,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						});
 					</script>
 				<!-- script-for-nav -->
-				<div style="float:left">
+				<div class="child-div">
 				  <img src="../images/navi_header.png">
 				</div>
 				<div class="banner-info">
