--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<!-- script-for-nav -->
 				<div class="banner-info">
 				<div class="child-div">
-				  <img src="../images/navi_header.png">
+				  <img class="header-navi" src="../images/navi_header.png">
 				</div>
 
 				<!-- <div class="logo"> -->
